fix the sidebar on admin section

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
     crossorigin="anonymous"
   />
+    <link href="https://dev-learnqoch-public-resource.s3.ap-south-1.amazonaws.com/css/font-awesome-4.7.0.min.css"
+      rel="stylesheet" id="bootstrap-css">
     <title>React App</title>
   </head>
   <body>
