student and teacher side profile tab all changes done admin side grade, subject, teacher tabs changes done working on assessment tab

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   />
     <link href="https://dev-learnqoch-public-resource.s3.ap-south-1.amazonaws.com/css/font-awesome-4.7.0.min.css"
       rel="stylesheet" id="bootstrap-css">
-    <title>React App</title>
+    <title>JPS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
